Attempting to fix an issue whereby the logo is partially covered by the navigation bar.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,7 +81,7 @@ header {
 	font-size: 3rem;
 	font-variant: small-caps;
 	color: #2e2e2e;
-	margin: 0;
+	margin: 30px;
 	letter-spacing: 0.05em;
 }
 
